--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:black;font-family:arial;color:white ;
+    position: absolute;
+    margin: -100px 0 0 -150px;
+    top: 50%;
+    left: 50%;
 
+}
+h1{color:grey;font-family:verdana}
+.maindiv {
+
+background-color:white;font-family:arial;color:black;
+width:300px;
+padding: 20px;
+border:25px;
+
+}
 
